--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
     <script type="text/javascript" src="/js/pixi.js"></script>
     <script type="text/javascript" src="/js/socket.js"></script>
     <!-- Todo: only include in production -->
-    <%= htmlWebpackPlugin.options.serviceWorkerLoader %>
+    <!-- <%= htmlWebpackPlugin.options.serviceWorkerLoader %> -->
     <!-- built files will be auto injected -->
   </body>
 </html>
