Add development fallback for requisity socket and pixi js

--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,10 @@
     <div id="app"></div>
     <script type="text/javascript" src="/js/pixi.js"></script>
     <script type="text/javascript" src="/js/socket.js"></script>
+    
+    <!-- Development fallback -->
+    <script type="text/javascript" src="127.0.0.1:3000/js/pixi.js"></script>
+    <script type="text/javascript" src="127.0.0.1:3000/js/socket.js"></script>
     <!-- Todo: only include in production -->
     <!-- <%= htmlWebpackPlugin.options.serviceWorkerLoader %> -->
     <!-- built files will be auto injected -->
