--- a/app/index.html
+++ b/app/index.html
@@ -35,8 +35,8 @@
     <script type="text/javascript" src="/js/socket.js"></script>
     
     <!-- Development fallback -->
-    <script type="text/javascript" src="127.0.0.1:3000/js/pixi.js"></script>
-    <script type="text/javascript" src="127.0.0.1:3000/js/socket.js"></script>
+    <script type="text/javascript" src="http://localhost:3000/js/pixi.js"></script>
+    <script type="text/javascript" src="http://localhost:3000/js/socket.js"></script>
     <!-- Todo: only include in production -->
     <!-- <%= htmlWebpackPlugin.options.serviceWorkerLoader %> -->
     <!-- built files will be auto injected -->
