--- a/app/index.html
+++ b/app/index.html
@@ -33,10 +33,14 @@
     <div id="app"></div>
     <script type="text/javascript" src="/js/pixi.js"></script>
     <script type="text/javascript" src="/js/socket.js"></script>
+    <script type="text/javascript" src="/js/web3.js"></script>
+    <script type="text/javascript" src="/js/wuf.js"></script>
     
     <!-- Development fallback -->
     <script type="text/javascript" src="http://localhost:3000/js/pixi.js"></script>
     <script type="text/javascript" src="http://localhost:3000/js/socket.js"></script>
+    <script type="text/javascript" src="http://localhost:3000/js/web3.js"></script>
+    <script type="text/javascript" src="http://localhost:3000/js/wuf.js"></script>
     <!-- Todo: only include in production -->
     <!-- <%= htmlWebpackPlugin.options.serviceWorkerLoader %> -->
     <!-- built files will be auto injected -->
