Inject environment into game

--- a/app/index.html
+++ b/app/index.html
@@ -41,6 +41,7 @@
     <script type="text/javascript" src="http://localhost:3000/js/socket.js"></script>
     <script type="text/javascript" src="http://localhost:3000/js/web3.js"></script>
     <script type="text/javascript" src="http://localhost:3000/js/wuf.js"></script>
+    <script type="text/javascript" src="/static/js/game.js"></script>
     <!-- Todo: only include in production -->
     <!-- <%= htmlWebpackPlugin.options.serviceWorkerLoader %> -->
     <!-- built files will be auto injected -->
