--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,14 @@
     <script type="text/javascript" src="http://localhost:3000/js/web3.js"></script>
     <script type="text/javascript" src="http://localhost:3000/js/wuf.js"></script>
     <script type="text/javascript" src="/static/js/pixi.filters.min.js"></script>
+
+    <script type="text/javascript" src="/static/js/View.js"></script>
+    <script type="text/javascript" src="/static/js/Grid.js"></script>
+    <script type="text/javascript" src="/static/js/Board.js"></script>
+    <script type="text/javascript" src="/static/js/GameObject.js"></script>
+    <script type="text/javascript" src="/static/js/Creature.js"></script>
+    <script type="text/javascript" src="/static/js/Mob.js"></script>
+
     <script type="text/javascript" src="/static/js/game.js"></script>
     <!-- Todo: only include in production -->
     <!-- <%= htmlWebpackPlugin.options.serviceWorkerLoader %> -->
